--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
 
   flask:
-    build: ./flask
+    build: ./src
     container_name: flask
     image: minorpatch/capstone-flask
     restart: always
