--- a/etc/docker/docker-compose.yml
+++ b/etc/docker/docker-compose.yml
@@ -5,16 +5,18 @@ services:
     container_name: nginx
     image: minorpatch/capstone-nginx
     restart: always
+    volumes:
+      - /opt/capstone.io/etc/nginx/:/etc/nginx/conf.d/
+      - /opt/capstone.io/etc/uswgi/:/etc/uswgi/
+      - /opt/capstone.io/data/logs/:/data/logs/
     ports:
       - "80:80"
-
-  flask:
-    build: ./flask
-    container_name: flask
-    image: minorpatch/capstone-flask
-    restart: always
-    environment:
-      - APP_NAME="Docker App"
-    expose:
-      - 8080
-    depends_on: nginx
+  # flask:
+  #   build: ./flask
+  #   container_name: flask
+  #   image: minorpatch/capstone-flask
+  #   restart: always
+  #   environment:
+  #     - APP_NAME="Docker App"
+  #   expose:
+  #     - 8080
