--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 2
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 end_of_line = lf
@@ -19,4 +19,8 @@ trim_trailing_whitespace = false
 max_line_length = 119
 
 [Makefile]
+indent_size = 2
 indent_style = tab
+
+[*.yml]
+indent_size = 2
