--- a/etc/nginx/conf.d/capstone.io.conf
+++ b/etc/nginx/conf.d/capstone.io.conf
@@ -1,5 +1,9 @@
 server {
+    listen [::]:80;
     listen 80;
+
+    # Include the basic h5bp config set
+    include configs/basic.conf;
 
     location / {
         include uwsgi_params;
