Update setup config

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,14 +3,14 @@ name = capstone
 
 [options]
 packages = find:
-package_dir = = src
+package_dir = = code
 include_package_data = true
 python_requires = >= 3.6
 
 [options.packages.find]
-where = src
+where = code
 
 [tool:pytest]
-testpaths = src/tests
+testpaths = code/tests
 filterwarnings =
     error
