Update config for nginx

--- a/etc/nginx/conf.d/capstone.io.conf
+++ b/etc/nginx/conf.d/capstone.io.conf
@@ -5,7 +5,17 @@ server {
     include configs/basic.conf;
 
     location / {
-        include uwsgi_params;
-        uwsgi_pass flask:8080;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
     }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    # location / {
+    #     include uwsgi_params;
+    #     uwsgi_pass flask:8080;
+    # }
 }
