--- a/etc/docker/docker-compose.yml
+++ b/etc/docker/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     container_name: flask
     image: minorpatch/capstone-flask
     restart: always
+    volums:
+      - /opt/capstone.io/code/:/app/
     environment:
       - APP_NAME="Docker App"
     expose:
