--- a/code/setup.cfg
+++ b/code/setup.cfg
@@ -3,14 +3,14 @@ name = capstone
 
 [options]
 packages = find:
-package_dir = = code
+package_dir = = .
 include_package_data = true
 python_requires = >= 3.6
 
 [options.packages.find]
-where = code
+where = .
 
 [tool:pytest]
-testpaths = code/tests
+testpaths = ./tests
 filterwarnings =
     error
