Update nginx config site

--- a/etc/nginx/conf.d/capstone.io.conf
+++ b/etc/nginx/conf.d/capstone.io.conf
@@ -5,17 +5,7 @@ server {
     include configs/basic.conf;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        include uwsgi_params;
+        uwsgi_pass flask:8080;
     }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-
-    # location / {
-    #     include uwsgi_params;
-    #     uwsgi_pass flask:8080;
-    # }
 }
