Update nginx config site

--- a/etc/nginx/conf.d/capstone.io.conf
+++ b/etc/nginx/conf.d/capstone.io.conf
@@ -5,7 +5,6 @@ server {
     include configs/basic.conf;
 
     location / {
-        include uwsgi_params;
-        uwsgi_pass flask:8080;
+        proxy_pass flask:8080;
     }
 }
