--- a/infra/main.yml
+++ b/infra/main.yml
@@ -3,7 +3,7 @@
   hosts: [localhost]
   gather_facts: false
   vars:
-    ansible_python_interpreter: /usr/bin/python3
+    ansible_python_interpreter: /usr/bin/python
     application: ansible
   tasks:
     - name: create instances
