--- a/infra/main.yml
+++ b/infra/main.yml
@@ -4,7 +4,7 @@
   gather_facts: false
   vars:
     ansible_python_interpreter: /usr/bin/python2
-    application: ansible
+    application: capstone
   tasks:
     - name: create instances
       include_role:
