--- a/infra/roles/route53/tasks/main.yml
+++ b/infra/roles/route53/tasks/main.yml
@@ -1,4 +1,5 @@
-- route53_health_check:
+- name: create health check
+  route53_health_check:
     state: present
     fqdn: www.capstone.io
     type: HTTP
@@ -7,7 +8,7 @@
     failure_threshold: 2
   register: hc
 
-- name: change route53
+- name: update route53
   route53:
     state: present
     zone: capstone.io
