Minor fixes for create_instance and route53

--- a/infra/roles/create_instance/tasks/main.yml
+++ b/infra/roles/create_instance/tasks/main.yml
@@ -4,8 +4,8 @@
     state: present
     region: us-east-2
     zones:
+      - us-east-2a
       - us-east-2b
-      - us-east-2c
     listeners:
       - protocol: http
         load_balancer_port: 80
