--- a/infra/roles/create_instance/tasks/main.yml
+++ b/infra/roles/create_instance/tasks/main.yml
@@ -14,7 +14,7 @@
 
 - name: Create EC2 instances
   ec2:
-    key_name: Jenkins_demo
+    key_name: capstone
     instance_type: t2.micro
     image: ami-0986c2ac728528ac2
     user_data: "{{ USERDATA }}"
