--- a/infra/roles/create_instance/tasks/main.yml
+++ b/infra/roles/create_instance/tasks/main.yml
@@ -4,8 +4,8 @@
     state: present
     region: us-east-1
     zones:
-      - us-east-1a
       - us-east-1b
+      - us-east-1c
     listeners:
       - protocol: http
         load_balancer_port: 80
