--- a/infra/roles/create_instance/tasks/main.yml
+++ b/infra/roles/create_instance/tasks/main.yml
@@ -2,10 +2,10 @@
   ec2_elb_lb:
     name: "{{ ELB_NAME }}"
     state: present
-    region: us-east-1
+    region: us-east-2
     zones:
-      - us-east-1b
-      - us-east-1c
+      - us-east-2a
+      - us-east-2b
     listeners:
       - protocol: http
         load_balancer_port: 80
@@ -18,7 +18,7 @@
     instance_type: t2.micro
     image: ami-0986c2ac728528ac2
     user_data: "{{ USERDATA }}"
-    region: us-east-1
+    region: us-east-2
     group_id:
       - sg-0c93978b488c8e844
     wait: yes
