--- a/infra/roles/create_instance/tasks/main.yml
+++ b/infra/roles/create_instance/tasks/main.yml
@@ -43,4 +43,4 @@
     ec2_elbs: "{{ ELB_NAME }}"
     region: "{{ item.region }}"
     instance_id: "{{ item.id }}"
-  with_items: "{{ ec2_instances.instances }}"
+  with_items: "{{ ec2_instances.tagged_instances }}"
