--- a/infra/main.yml
+++ b/infra/main.yml
@@ -9,6 +9,6 @@
     - name: create instances
       include_role:
         name: create_instance
-    - name: setup DNS
-      include_role:
-        name: route53
+    # - name: setup DNS
+    #   include_role:
+    #     name: route53
