--- a/infra/roles/create_instance/tasks/main.yml
+++ b/infra/roles/create_instance/tasks/main.yml
@@ -15,8 +15,8 @@
 - name: Create EC2 instances
   ec2:
     key_name: capstone
-    instance_type: t2.micro
-    image: ami-0986c2ac728528ac2
+    instance_type: t2.medium
+    image: ami-07c1207a9d40bc3bd
     user_data: "{{ USERDATA }}"
     region: us-east-2
     group_id:
