--- a/infra/k8s/services/blue.yaml
+++ b/infra/k8s/services/blue.yaml
@@ -6,6 +6,7 @@ spec:
   selector:
     app: nginx
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
