--- a/infra/k8s/services/blue.yaml
+++ b/infra/k8s/services/blue.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
+  type: LoadBalancer
   selector:
     app: nginx
   ports:
     - name: http
-      protocol: TCP
       port: 80
       targetPort: 80
+      protocol: TCP
