--- a/infra/k8s/services/backend.yml
+++ b/infra/k8s/services/backend.yml
@@ -4,13 +4,13 @@ metadata:
   name: nginx-service
   labels:
     app: nginx
-    role: green
+    role: ${ROLE}
     env: production
 spec:
   type: LoadBalancer
   selector:
     app: nginx
-    role: green
+    role: ${ROLE}
   ports:
     - name: http
       port: 80
