--- a/infra/k8s/deployments/green.yaml
+++ b/infra/k8s/deployments/green.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: nginx-deployment-green
   labels:
     app: nginx
+    role: green
 spec:
   replicas: 4
   selector:
@@ -15,7 +16,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.18.0-alpine
-        ports:
-        - containerPort: 80
+        - name: nginx
+          image: nginx:1.18.0-alpine
+          ports:
+            - containerPort: 80
