--- a/infra/k8s/deployments/blue.yaml
+++ b/infra/k8s/deployments/blue.yaml
@@ -2,21 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment-blue
-  labels:
-    app: nginx
-    role: blue
 spec:
   replicas: 4
-  selector:
-    matchLabels:
-      app: nginx
   template:
     metadata:
       labels:
         app: nginx
+        role: blue
     spec:
       containers:
         - name: nginx
           image: nginx:1.18.0-alpine
           ports:
             - containerPort: 80
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
