--- a/infra/docker/green/Dockerfile
+++ b/infra/docker/green/Dockerfile
@@ -1,2 +1,2 @@
 FROM nginx:1.18.0-alpine
-RUN echo '<h1 style="color: green;">Green</h1>' > /var/www/html/index.html
+RUN echo '<h1 style="color: green;">Green</h1>' > /usr/share/nginx/html/index.html
