--- a/infra/k8s/deployments/backend.yml
+++ b/infra/k8s/deployments/backend.yml
@@ -2,26 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment-${ROLE}
-  labels:
-    app: nginx
-    role: ${ROLE}
 spec:
   replicas: 4
-  selector:
-    matchLabels:
-      app: nginx
   template:
     metadata:
       labels:
         app: nginx
+        role: ${ROLE}
     spec:
       containers:
-        # example:
-        # - name: api
-        #   image: minorpath/capstone-nginx:${ROLE}
-        #   ports:
-        #   - containerPort: 80
         - name: nginx
-          image: nginx:1.18.0-alpine
+          image: minorpatch/capstone-nginx:${ROLE}
           ports:
             - containerPort: 80
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
