--- a/infra/k8s/deployments/blue.yaml
+++ b/infra/k8s/deployments/blue.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx:1.18.0-alpine
+          image: minorpatch/capstone-nginx:blue
           ports:
             - containerPort: 80
           readinessProbe:
