--- a/infra/k8s/deployments/blue.yaml
+++ b/infra/k8s/deployments/blue.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment-blue
+  selector:
+    matchLabels:
+      app: nginx
+      role: blue
 spec:
   replicas: 4
   template:
