--- a/infra/k8s/deployments/backend.yml
+++ b/infra/k8s/deployments/backend.yml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment-${ROLE}
+  selector:
+    matchLabels:
+      app: nginx
+      role: ${ROLE}
 spec:
   replicas: 4
   template:
