--- a/infra/k8s/services/blue.yaml
+++ b/infra/k8s/services/blue.yaml
@@ -7,7 +7,7 @@ metadata:
     role: blue
     env: production
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
   type: LoadBalancer
   selector:
