--- a/infra/k8s/deployments/blue.yaml
+++ b/infra/k8s/deployments/blue.yaml
@@ -17,6 +17,9 @@ spec:
       containers:
         - name: nginx
           image: minorpatch/capstone-nginx:blue
+          env:
+            - name: APP_NAME
+              value: BLUE APP
           ports:
             - containerPort: 80
           readinessProbe:
