--- a/infra/docker/blue/flask/ci/Dockerfile
+++ b/infra/docker/blue/flask/ci/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7.7-alpine AS builder
 WORKDIR /app
-COPY ./code/requirements-dev.txt /app/
-RUN pip install --user -r requirements-dev.txt
+COPY ./code/requirements.txt /app/
+RUN pip install --user -r requirements.txt
 
 FROM builder
 WORKDIR /app
