--- a/infra/docker/blue/flask/ci/Dockerfile
+++ b/infra/docker/blue/flask/ci/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.7.7-alpine AS builder-ci
 WORKDIR /app
 COPY ./code/requirements-ci.txt /app/
+RUN ls -la
 RUN pip install --user -r requirements-ci.txt
 
 FROM builder
