--- a/infra/docker/blue/flask/ci/Dockerfile
+++ b/infra/docker/blue/flask/ci/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7.7-alpine AS builder
-RUN apk update && apk add gcc python3-dev
+RUN apk update && apk add gcc build-base libffi-dev python3-dev
 WORKDIR /app
 COPY ./code/requirements.txt ./code/requirements-ci.txt /app/
 RUN pip install --user -r requirements-ci.txt
