--- a/code/.coveragerc
+++ b/code/.coveragerc
@@ -12,5 +12,5 @@ omit =
     # omit anything in a .local directory anywhere
     */.local/*
     # omit other files for testing and running
-    code/run.py
-    code/tests/performance.py
+    run.py
+    tests/performance.py
