Add changes for green deployment

--- a/infra/k8s/deployments/green.yaml
+++ b/infra/k8s/deployments/green.yaml
@@ -17,12 +17,22 @@ spec:
       containers:
         - name: nginx
           image: minorpatch/capstone-nginx:green
-          env:
-            - name: APP_NAME
-              value: GREEN
+          imagePullPolicy: "Always"
           ports:
             - containerPort: 80
           readinessProbe:
             httpGet:
               path: /
               port: 80
+        - name: flask
+          image: minorpatch/capstone-flask:green
+          imagePullPolicy: "Always"
+          env:
+            - name: APP_NAME
+              value: "GREEN APP"
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
