--- a/infra/k8s/deployments/green.yaml
+++ b/infra/k8s/deployments/green.yaml
@@ -1,28 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment-green
+  name: capstone-deployment-green
 spec:
   replicas: 4
   selector:
     matchLabels:
-      app: nginx
+      app: capstone
       role: green
   template:
     metadata:
       labels:
-        app: nginx
+        app: capstone
         role: green
     spec:
       containers:
         - name: nginx
           image: minorpatch/capstone-nginx:green
-          env:
-            - name: APP_NAME
-              value: GREEN
+          imagePullPolicy: "Always"
           ports:
             - containerPort: 80
           readinessProbe:
             httpGet:
               path: /
               port: 80
+        - name: flask
+          image: minorpatch/capstone-flask:green
+          imagePullPolicy: "Always"
+          env:
+            - name: APP_NAME
+              value: "BLUE APP"
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
