--- a/infra/k8s/services/green.yaml
+++ b/infra/k8s/services/green.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: capstone-service
   labels:
-    app: nginx
+    app: capstone
     role: green
     env: production
 spec:
   type: LoadBalancer
   selector:
-    app: nginx
+    app: capstone
     role: green
   ports:
     - name: http
