Update flask docker file

--- a/infra/docker/blue/flask/Dockerfile
+++ b/infra/docker/blue/flask/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7.7-alpine AS builder
 WORKDIR /app
 COPY ./code/requirements.txt /app/
-RUN pip install --user --no-binary -r requirements.txt
+RUN pip install --no-binary :all: -r requirements.txt
 
 FROM builder
 WORKDIR /app
