--- a/infra/tekton/resources/nginx-image-resource.yaml
+++ b/infra/tekton/resources/nginx-image-resource.yaml
@@ -6,4 +6,4 @@ spec:
   type: image
   params:
     - name: url
-      value: minorpatch/capstone-nginx:blue
+      value: minorpatch/capstone-nginx:tekton
