--- a/infra/tekton/resources/flask-image-resource.yaml
+++ b/infra/tekton/resources/flask-image-resource.yaml
@@ -6,4 +6,4 @@ spec:
   type: image
   params:
     - name: url
-      value: minorpatch/capstone-flask:blue
+      value: minorpatch/capstone-flask:tekton
